8209624: [JVMCI] Invalidate nmethods instead of directly unloading them when the InstalledCode is dropped

Reviewed-by: kvn